--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     <android.support.design.widget.TabLayout
+        app:tabGravity="center"
         android:background="@color/transparent"
         android:layout_alignParentBottom="true"
         android:id="@+id/tabs"
