--- a/app/src/main/res/drawable/fav_button.xml
+++ b/app/src/main/res/drawable/fav_button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <corners android:bottomLeftRadius="0dp" android:radius="5dp" android:topLeftRadius="0dp" />
+            <corners android:radius="5dp" />
             <padding android:bottom="5dp" android:left="5dp" android:right="5dp" android:top="5dp" />
             <solid android:color="@color/transparent" />
             <stroke android:width="1dp" android:color="?attr/hintcolor"></stroke>
@@ -11,7 +11,7 @@
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <corners android:bottomLeftRadius="0dp" android:radius="5dp" android:topLeftRadius="0dp" />
+            <corners android:radius="5dp" />
             <solid android:color="@color/red_500" />
 
             <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="5dp" />
