--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,180 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:animateLayoutChanges="true"
     android:layout_width="match_parent"
-    android:background="?attr/actionbarcolor"
+    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        app:title="Sobre"
-        android:layout_margin="5dp"
-        android:background="?attr/actionbarcolor"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize" />
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:animateLayoutChanges="true"
-            android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        android:fitsSystemWindows="true"
+        app:elevation="0dp"
+        app:expanded="false">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsetoolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="200dp"
+            android:fitsSystemWindows="true"
+            app:contentScrim="@color/colorPrimaryDark"
+            app:expandedTitleGravity="center"
+            app:layout_scrollFlags="exitUntilCollapsed|scroll"
+            app:scrimAnimationDuration="100"
+            app:title="@string/app_name"
+            app:titleEnabled="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="5dp"
+                android:text="Sobre"
+                android:textColor="@color/white"
+                android:textSize="36sp"
+                app:layout_collapseMode="parallax" />
+
+
+            <ProgressBar
+                android:id="@+id/loading"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="-10dp"
+                android:layout_marginTop="-10dp"
+
+                android:indeterminateOnly="true" />
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="top"
+                android:elevation="0dp"
+                app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"></android.support.v7.widget.Toolbar>
+
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="0dp"
+        android:layout_width="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark">
+
             <LinearLayout
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:animateLayoutChanges="true"
                 android:orientation="vertical">
 
-                <TextView
-                    android:padding="10dp"
-
-                    android:id="@+id/creatorstitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:text="@string/criadores"
-                     android:textColor="?attr/textcolor"
-                    android:textSize="26sp"
-                    android:textStyle="bold" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:layout_gravity="center"
-                    android:id="@+id/creatorsrecycler"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:nestedScrollingEnabled="false" />
-
-
-            </LinearLayout>
-            <LinearLayout
-
-                android:background="?attr/actionbarcolor"
-                android:elevation="2dp"
-                android:padding="10dp"
-                android:animateLayoutChanges="true"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/referencestitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:text="@string/refer_ncias"
-                     android:textColor="?attr/textcolor"
-                    android:textSize="26sp"
-                    android:textStyle="bold" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:nestedScrollingEnabled="false"
-                    android:id="@+id/designrecycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-
-            </LinearLayout>
-            <LinearLayout
-                 android:animateLayoutChanges="true"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:padding="10dp"
-                    android:id="@+id/artiststitle"
-                    android:layout_margin="10dp"
-                     android:textColor="?attr/textcolor"
-                    android:textSize="26sp"
-                    android:text="@string/artistas"
-                    android:textStyle="bold"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:nestedScrollingEnabled="false"
-                    android:id="@+id/artistsrecycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-
-            </LinearLayout>
-            <LinearLayout
-                android:elevation="2dp"
-                android:padding="2dp"
-                android:animateLayoutChanges="true"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/suportitle"
-                    android:layout_width="match_parent"
-                    android:layout_margin="15dp"
-                    android:textAlignment="center"
-                    android:text="@string/suporte"
-                    android:textSize="24sp"
-                    android:layout_height="wrap_content" />
-
-                <android.support.v7.widget.CardView
-                    android:background="?attr/actionbarcolor"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="30dp"
-                    android:padding="10dp"
-                    app:cardCornerRadius="10dp">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:textStyle="bold"
+                        android:id="@+id/creatorstitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:padding="10dp"
+                        android:text="@string/criadores"
+                        android:textColor="@color/white"
+                        android:textSize="26sp"
+                        android:textStyle="bold" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/creatorsrecycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:nestedScrollingEnabled="false" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/referencestitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="@string/refer_ncias"
+                        android:textColor="@color/white"
+                        android:textSize="26sp"
+                        android:textStyle="bold" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/designrecycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/artiststitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:padding="10dp"
+                        android:text="@string/artistas"
+                        android:textColor="@color/white"
+                        android:textSize="26sp"
+                        android:textStyle="bold" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/artistsrecycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/suportitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:text="@string/suporte"
+                        android:textColor="@color/white"
+                        android:textSize="24sp" />
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:background="@color/owhite"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:padding="1dp"
+                        app:cardCornerRadius="25dp">
+
+                        <TextView
+                            android:id="@+id/helpad"
+                            style="@style/AppTheme"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:animateLayoutChanges="true"
+                            android:padding="10dp"
+                            android:text="@string/suporrt_ad"
+                            android:textAlignment="center"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+                    </android.support.v7.widget.CardView>
+
+
+                    <TextView
+                        style="@style/AppTheme"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableTop="@mipmap/ic_launcher"
+                        android:text="@string/motiv_desenvolvido_por_inlustris_em_2018_todos_os_direitos_reservados"
                         android:textAlignment="center"
-                        android:id="@+id/helpad"
+                        android:textColor="@color/grey_300"
+                        android:textSize="14sp" />
+
+                    <TextView
                         style="@style/AppTheme"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:animateLayoutChanges="true"
-                        android:drawableTop="@drawable/ic_fireworks"
-                        android:text="@string/suporrt_ad"
-                        android:textSize="20sp" />
-                </android.support.v7.widget.CardView>
+                        android:drawableBottom="@mipmap/firebase"
+                        android:text="@string/firebase"
+                        android:textAlignment="center"
+                        android:textColor="@color/grey_300"
+                        android:textSize="12sp" />
 
+                </LinearLayout>
 
-                <TextView
-                    android:textColor="@color/grey_600"
-
-                    android:drawableTop="@mipmap/ic_launcher"
-                    android:textSize="18sp"
-                    style="@style/AppTheme"
-                    android:textAlignment="center"
-                    android:text="@string/motiv_desenvolvido_por_inlustris_em_2018_todos_os_direitos_reservados"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:textColor="@color/grey_600"
-                    android:drawableBottom="@mipmap/firebase"
-                    android:textSize="12sp"
-                    style="@style/AppTheme"
-                    android:textAlignment="center"
-                    android:text="@string/firebase"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
+        </android.support.v4.widget.NestedScrollView>
 
+    </android.support.v7.widget.CardView>
 
-
-
-
-
-
-
-        </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
