--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,102 +3,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/actionbarcolor"
+    android:background="@color/colorPrimaryDark"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.HomeFragment">
+    tools:context=".Fragments.ProfileFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/myquotesrecycler"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="0dp"
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-    <ProgressBar
-        android:id="@+id/loading"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginTop="-7dp"
-        android:indeterminate="true"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/myquotesrecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingEnd="0dp"
+            android:paddingStart="0dp" />
 
-        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+
+    </android.support.v7.widget.CardView>
+
 
     <android.support.design.widget.AppBarLayout
-        android:background="@drawable/actionbarbackground"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:background="@color/transparent"
         android:id="@+id/appbarlayout"
         android:fitsSystemWindows="true"
-        android:elevation="3dp"
-        android:layout_height="wrap_content">
+        app:elevation="0dp"
+        app:expanded="false">
         <android.support.design.widget.CollapsingToolbarLayout
-            android:background="@drawable/actionbarbackground"
             android:id="@+id/collapsetoolbar"
-            app:contentScrim="?attr/backgroundcolor"
+            app:contentScrim="@color/colorPrimaryDark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:expandedTitleGravity="top|center"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed"
+            app:layout_scrollFlags="exitUntilCollapsed|scroll"
+            app:title="@string/app_name"
+            app:titleEnabled="true"
             app:expandedTitleTextAppearance="?attr/textcolor"
             android:fitsSystemWindows="true">
 
 
             <LinearLayout
+                android:padding="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="25dp"
                 app:layout_collapseMode="parallax">
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="120dp"
                     android:id="@+id/profilepic"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="5dp"
+                    android:padding="10dp"
                     android:layout_gravity="center"
                     android:foreground="?attr/selectableItemBackground"
-                    android:padding="30dp"
+                    android:tooltipText="Clique na foto para alterá-la"
                     android:src="@drawable/ic_person_black_24dp"
                     app:civ_fill_color="@color/transparent" />
-
                 <TextView
-                    android:id="@+id/tip"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/username"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:backgroundTint="@color/colorAccent"
-                    android:padding="10dp"
-                    android:text="Clique na foto para alterá-la"
-                    android:textColor="@color/colorAccent"
-                    android:textStyle="bold" />
+                    android:padding="5dp"
+                    android:text="@string/app_name"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:textSize="24sp" />
+
 
                 <RadioGroup
-                    android:layout_width="wrap_content"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="horizontal">
+                    android:layout_marginTop="15dp"
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <RadioButton
                         android:id="@+id/posts"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/post_button"
                         android:button="@color/transparent"
                         android:checked="true"
-                        android:padding="10dp"
-                        android:text="frases"
+                        android:padding="5dp"
+                        android:text="Posts"
+                        android:textAlignment="center"
                         android:textColor="@color/radioselect"
                         android:textStyle="bold" />
 
                     <RadioButton
                         android:id="@+id/likes"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
                         android:background="@drawable/fav_button"
                         android:button="@color/transparent"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:text="favoritos"
+                        android:textAlignment="center"
                         android:textColor="@color/radioselect"
                         android:textStyle="bold" />
                 </RadioGroup>
@@ -106,29 +121,20 @@
 
             </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:visibility="invisible" />
-
-
-
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/transparent"
+                android:layout_gravity="top"
+                android:elevation="0dp"
                 app:layout_collapseMode="pin"
-                app:titleTextColor="?attr/textcolor">
+                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
+
             </android.support.v7.widget.Toolbar>
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
+
 
     </android.support.design.widget.AppBarLayout>
 
