--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -4,7 +4,8 @@
     android:hapticFeedbackEnabled="true"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_margin="15dp"
+    android:layout_margin="1dp"
+    android:layout_marginBottom="10dp"
     android:animateLayoutChanges="true"
     android:layout_height="wrap_content"
     android:background="@drawable/roundedstroke">
