--- a/app/src/main/res/layout/references.xml
+++ b/app/src/main/res/layout/references.xml
@@ -3,19 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="?attr/backgroundcolor"
-    app:cardElevation="4dp"
-    android:layout_margin="50dp"
-    app:cardCornerRadius="20dp"
+    android:layout_margin="1dp"
+    app:cardBackgroundColor="@color/owhite"
+    app:cardCornerRadius="25dp"
+    app:cardElevation="0dp"
     android:orientation="vertical">
     <LinearLayout
-        android:padding="15dp"
-         android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_gravity="center"
             android:layout_width="100dp"
             android:id="@+id/brand"
             android:layout_height="100dp"
