--- a/app/src/main/res/menu/profilemenu.xml
+++ b/app/src/main/res/menu/profilemenu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/settings"
-        android:icon="@drawable/ic_settings"
+        android:icon="@drawable/ic_settings_black_24dp"
         android:title="configurações"
         app:showAsAction="ifRoom" />
 
