--- a/app/src/main/res/drawable/bottom_line.xml
+++ b/app/src/main/res/drawable/bottom_line.xml
@@ -9,10 +9,10 @@
 
     <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
         <shape>
-            <solid android:color="?attr/actionbarcolor" />
+            <solid android:color="@color/transparent" />
             <stroke
                  android:width="1dp"
-                android:color="?attr/hintcolor" />
+                android:color="@color/grey_400" />
         </shape>
     </item>
 
