--- a/app/src/main/res/drawable/ic_sentiment_dissatisfied_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_sentiment_dissatisfied_black_24dp.xml
@@ -2,7 +2,7 @@
     android:width="24dp"
     android:height="24dp"
     android:autoMirrored="true"
-    android:tint="#FFFFFF"
+    android:tint="@color/grey_800"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
