--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,36 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:fitsSystemWindows="true">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/grey_100"
+    android:fitsSystemWindows="true"
+    tools:context=".SettingsActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="@color/colorPrimaryDark"
-        android:fitsSystemWindows="true">
+        android:id="@+id/appbarlayout"
+        android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        android:fitsSystemWindows="true"
+        app:elevation="0dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsetoolbar"
+            android:layout_height="200dp"
+            android:fitsSystemWindows="true"
+            app:contentScrim="@color/grey_100"
+            app:expandedTitleGravity="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="@color/colorPrimaryDark"
-            app:expandedTitleGravity="center|bottom"
-            app:layout_scrollFlags="exitUntilCollapsed|scroll"
-            app:title="Configurações"
+            app:scrimAnimationDuration="1000"
+            app:statusBarScrim="@color/grey_500"
             app:titleEnabled="true">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/userpic"
-                android:layout_width="180dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="30dp"
-                android:src="@drawable/ic_person_black_24dp"
-                app:civ_fill_color="@color/transparent"
-                app:layout_collapseMode="parallax" />
+            <!--pq eu não sou a gordinha do scott pilgrim p/ jogar fogareu gratuito-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -42,149 +37,173 @@
                 android:elevation="0dp"
                 app:layout_collapseMode="pin" />
 
-        </android.support.design.widget.CollapsingToolbarLayout>
 
+        </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
+        app:cardBackgroundColor="@color/transparent"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/topround"
-        android:elevation="1dp"
-        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <android.support.v7.widget.CardView
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-
-            </LinearLayout>
-
-            <RelativeLayout
+                android:layout_marginBottom="10dp"
+                app:cardCornerRadius="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-3dp"
-                android:animateLayoutChanges="true">
-
-                <Button
-                    android:id="@+id/changename"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/transparent"
-                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                    android:drawablePadding="5dp"
-                    android:drawableStart="@drawable/usersquare"
-                    android:elevation="0dp"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:padding="10dp"
-                    android:text="Editar perfil"
-                    android:textAlignment="textStart"
-                    android:textColor="?attr/textcolor" />
+                app:cardElevation="0dp">
 
                 <LinearLayout
-                    android:id="@+id/editname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone">
-
-                    <ImageButton
-                        android:id="@+id/backname"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@color/transparent"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:src="@drawable/ic_chevron_left_black_24dp" />
-
-                    <EditText
-                        android:id="@+id/username"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:hint="@string/username"
-                        android:imeActionLabel="Salvar"
-                        android:imeOptions="actionDone"
-                        android:inputType="text"
-                        android:padding="15dp" />
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
                     <Button
-                        android:id="@+id/save"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/changename"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:background="@color/transparent"
+                        android:drawableEnd="@drawable/ic_mode_edit_white_24dp"
+                        android:drawablePadding="5dp"
+                        android:drawableStart="@drawable/ic_person_black_24dp"
                         android:elevation="0dp"
                         android:foreground="?attr/selectableItemBackground"
-                        android:text="Ok"
-                        android:textColor="@color/colorAccent" />
+                        android:text="@string/username"
+                        android:textAlignment="textStart"
+                        android:textAllCaps="false"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:layout_width="wrap_content"
+                        android:text="Altere seu nome de usuário" />
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bottom_line"
+                        android:orientation="vertical">
+
+                        <Button
+                            android:id="@+id/deleteposts"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/transparent"
+                            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+                            android:drawablePadding="5dp"
+                            android:drawableStart="@drawable/ic_delete_red_24dp"
+                            android:elevation="0dp"
+                            android:foreground="?attr/selectableItemBackground"
+                            android:padding="10dp"
+                            android:text="Remover posts"
+                            android:textAlignment="textStart"
+                            android:textAllCaps="false"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+
+                            android:paddingBottom="10dp"
+                            android:paddingStart="10dp"
+                            android:text="Remova todas as suas publicações" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bottom_line"
+                        android:orientation="vertical">
+
+                        <Button
+                            android:id="@+id/deleteaccount"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/transparent"
+                            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+                            android:drawablePadding="5dp"
+                            android:drawableStart="@drawable/ic_sentiment_dissatisfied_black_24dp"
+                            android:elevation="0dp"
+                            android:foreground="?attr/selectableItemBackground"
+                            android:padding="10dp"
+                            android:text="Remover conta"
+                            android:textAlignment="textStart"
+                            android:textAllCaps="false"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="10dp"
+                            android:paddingStart="10dp"
+                            android:text="Remover publicações e conta do aplicativo" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <Button
+                            android:id="@+id/exit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/transparent"
+                            android:drawablePadding="5dp"
+                            android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
+                            android:elevation="0dp"
+                            android:foreground="?attr/selectableItemBackground"
+                            android:padding="10dp"
+                            android:text="Sair"
+                            android:textAlignment="textStart"
+                            android:textAllCaps="false"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="10dp"
+                            android:paddingStart="10dp"
+                            android:text="Sair do aplicativo" />
+
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
-
-            </RelativeLayout>
-
-
-            <Button
-                android:id="@+id/deleteposts"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/transparent"
-                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/removepostsquare"
-                android:elevation="0dp"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="10dp"
-                android:text="Remover posts"
-                android:textAlignment="textStart"
-                android:textColor="?attr/textcolor" />
-
-
-            <Button
-                android:id="@+id/deleteaccount"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/transparent"
-                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/removeaccount"
-                android:elevation="0dp"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="10dp"
-                android:text="Remover conta"
-                android:textAlignment="textStart"
-                android:textColor="?attr/textcolor" />
-
-
-            <Button
-                android:id="@+id/exit"
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/transparent"
-                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/logout"
-                android:elevation="0dp"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="10dp"
-                android:text="Sair"
-                android:textAlignment="textStart"
-                android:textColor="?attr/textcolor" />
-
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 
 </android.support.design.widget.CoordinatorLayout>
