--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,8 +39,7 @@
         android:background="@color/transparent"
         android:id="@+id/appbarlayout"
         android:fitsSystemWindows="true"
-        app:elevation="0dp"
-        app:expanded="false">
+        app:elevation="0dp">
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsetoolbar"
             app:contentScrim="@color/colorPrimaryDark"
