--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,103 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/home"
+    android:background="@color/colorPrimaryDark"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="?attr/backgroundcolor"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-     android:orientation="vertical">
+    tools:context=".Fragments.HomeFragment">
+
     <android.support.v7.widget.Toolbar
-        android:background="@drawable/bottom_line"
         android:elevation="0dp"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         >
-        <LinearLayout
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        android:layout_height="wrap_content">
 
-            <android.support.v7.widget.SearchView
-                android:id="@+id/search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="?attr/hintcolor"
-                android:focusedByDefault="true"
-                app:defaultQueryHint="Busque o que seu coração quiser..."
-                app:iconifiedByDefault="false"
-                app:queryBackground="@color/transparent"
-                app:submitBackground="@color/transparent" />
-            <android.support.design.widget.TabLayout
-
-                android:layout_height="wrap_content"
-                app:tabMode="scrollable"
-                app:tabIndicatorColor="?attr/textcolor"
-                app:tabIndicatorHeight="1dp"
-                android:id="@+id/searchoptions"
-                android:layout_width="match_parent"
-                app:tabTextColor="?attr/hintcolor">
-
-                <android.support.design.widget.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:icon="@drawable/ic_author_sign" />
-
-                <android.support.design.widget.TabItem
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:icon="@drawable/ic_person_black_24dp" />
-
-                <android.support.design.widget.TabItem
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:icon="@drawable/ic_favorite2_black_24dp" />
-
-                <android.support.design.widget.TabItem
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:icon="@drawable/ic_bookmark_black_15dp" />
-
-                <android.support.design.widget.TabItem
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:icon="@drawable/ic_music_note_black_24dp" />
-
-                <android.support.design.widget.TabItem
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:icon="@drawable/ic_filter_vintage_black_24dp" />
-
-            </android.support.design.widget.TabLayout>
-        </LinearLayout>
-
+        <android.support.v7.widget.SearchView
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounds"
+            android:theme="@style/AppTheme"
+            app:iconifiedByDefault="false"
+            app:queryBackground="@color/transparent"
+            app:queryHint="Pesquise frases ou autores..." />
     </android.support.v7.widget.Toolbar>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/searchresult"
-        android:padding="10dp"
+
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
-    <LinearLayout
-        android:layout_margin="50dp"
-        android:layout_gravity="center"
-        android:id="@+id/empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <ImageView
-             android:tint="?attr/textcolor"
-             android:layout_width="150dp"
-            android:layout_height="150dp"
-             android:contentDescription="@string/empty_search"
-            android:adjustViewBounds="true"
-            android:padding="20dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_a_ok_monochrome" />
-        <TextView
-            android:textStyle="bold"
-            android:text="Faça aquela pesquisa top!"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="0dp"
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/composesrecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingEnd="0dp"
+            android:paddingStart="0dp" />
+
+    </android.support.v7.widget.CardView>
+
+
 </LinearLayout>
