--- a/app/src/main/res/layout/references.xml
+++ b/app/src/main/res/layout/references.xml
@@ -2,19 +2,18 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    app:cardBackgroundColor="@color/transparent"
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
-    app:cardBackgroundColor="@color/owhite"
     app:cardCornerRadius="25dp"
     app:cardElevation="0dp"
     android:orientation="vertical">
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_gravity="center"
             android:layout_width="100dp"
             android:id="@+id/brand"
             android:layout_height="100dp"
@@ -30,7 +29,7 @@
             android:layout_gravity="center"
             android:padding="10dp"
             android:text="brand"
-            android:textColor="?attr/textcolor"  />
+            android:textColor="@color/white" />
     </LinearLayout>
 
 
