--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -5,26 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_margin="1dp"
-    app:cardBackgroundColor="@color/owhite"
-    android:padding="10dp"
+    android:foreground="?attr/selectableItemBackground"
+    android:padding="5dp"
+    app:cardBackgroundColor="@color/transparent"
     app:cardCornerRadius="25dp"
     app:cardElevation="0dp">
 
-    <LinearLayout
-         android:id="@+id/randomcolors"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:background="@drawable/triangl"
-        android:orientation="horizontal" />
   <TextView
+      android:layout_width="match_parent"
+      android:foreground="?attr/selectableItemBackground"
       android:textStyle="bold"
       android:layout_gravity="center"
       android:id="@+id/reference"
-       android:padding="10dp"
       android:textColor="@color/white"
       android:textSize="28sp"
       android:text="@string/reference"
-      android:layout_width="wrap_content"
+      android:textAlignment="center"
       android:layout_height="wrap_content" />
 
 </android.support.v7.widget.CardView>
